Implements wear presentation flow.

--- a/wear/src/main/AndroidManifest.xml
+++ b/wear/src/main/AndroidManifest.xml
@@ -1,18 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.chen.presentationproject" >
+    package="com.navroopsingh.spotlight" >
 
     <uses-feature android:name="android.hardware.type.watch" />
+
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:supportsRtl="true"
         android:theme="@android:style/Theme.DeviceDefault" >
+        <uses-library
+            android:name="com.google.android.wearable"
+            android:required="false" />
+
         <activity
-            android:name=".StartPresentationActivity"
-            android:label="@string/app_name" >
+            android:name=".BeginPresentationActivity"
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.DeviceDefault.Light" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".DuringPresentationActivity"
+            android:label="@string/title_activity_during_presentation"
+            android:parentActivityName=".BeginPresentationActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.navroopsingh.spotlight.BeginPresentationActivity" />
+        </activity>
+        <activity
+            android:name=".EndPresentationActivity"
+            android:label="@string/title_activity_end_presentation" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".WatchStatisticsActivity"
+            android:label="@string/title_activity_watch_statistics" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
